# shake-fpga

./: CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  shake-fpga.cabal
app/: Main.hs
src/Development/Shake/: FPGA.hs  Verilate.hs
src/Development/Shake/FPGA/: DirStructure.hs  Internal.hs  Utils.hs
src/Development/Shake/Verilate/: Cabal.hs
src/Distribution/: FPGA.hs
src/Distribution/FPGA/: Hooks.hs
